# hhand

./: .gitignore  Cargo.toml  README.md  config.toml
src/: app.rs  bookmarks.rs  config.rs  import.rs  main.rs  ui.rs
src/bookmarks/: importer.rs  loader.rs  mod.rs
src/bookmarks/importer/: chrome.rs  firefox.rs
src/launcher/: locator.rs  locator_linux.rs  locator_win.rs  mod.rs
src/ui/: events.rs  input.rs  layout.rs  mod.rs
