[package]
name = "hhand"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
arboard = "3.5.0"
crossterm = "0.29.0"
dirs = "6.0.0"
open = "5.3.2"
ratatui = "0.29.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
rust-ini = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
